--- a/templates/mangrove_Index.html
+++ b/templates/mangrove_Index.html
@@ -53,7 +53,7 @@
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h1>Lets Protect Mangroves</h1>
+                    <h1>Let's Protect Mangroves</h1>
                     <h4>This project is proposed with the idea to analyse the difference between the past and present land near
                          coastal areas and provide solutions based on the analysis.</h4>
                     <!--<a href="{{ url_for('static', filename='location2.html')}}" class="smoothScroll btn btn-default">Get Detailed Analysis Here</a>-->
