--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
     <input type="date" name="b_date" style="color:black" min='2014-01-01' max='2019-12-31'><br><br>
     SELECT THE AFTER DATE <br>
     <input type="date" name="a_date" style="color:black"><br>
-    <input type="submit" value="Get Detailed Analysis" formaction="http://127.0.0.1:5000/index" class="smoothScroll btn btn-default">
+    <input type="submit" value="Get Detailed Analysis" formaction="/index" class="smoothScroll btn btn-default">
   </form>
 </div>	  
   </div>
