--- a/templates/final.html
+++ b/templates/final.html
@@ -11,7 +11,7 @@
 
 <title>Mangroves</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min1.css')}}">
-background-image: url({{ url_for('static', filename='images/home-bg.jpg') }})
+<link rel="stylesheet" href="{{ url_for('static', filename='css/myfile.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min1.css')}}">
 
 <!-- Main css -->
