--- a/templates/final.html
+++ b/templates/final.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style1.css')}}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/myfile.css') }}">
 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather:300,400" rel="stylesheet">
-
+background-image: url('/static/images/home-bg.jpg')
 
 <style>
 
@@ -31,6 +31,7 @@ th, td {
 </head>
 
 <BODY>
+background-image: url('/static/images/home-bg.jpg')
 <div class="navbar navbar-default navbar-static-top" role="navigation">
      <div class="container">
 
